# kbase

./: .cursorrules  .gitignore  AGENTS.md  CHECKBOX_FIX_SUMMARY.md  Containerfile  Dockerfile  EDITOR_SYNC_FIX_V2.md  EDITOR_SYNC_SIMPLIFIED.md  KEYBOARD_NAVIGATION_IMPLEMENTATION.md  LICENSE  MANUAL_TEST_CHECKLIST.md  MONACO_IMPLEMENTATION_SUMMARY.md  PERSISTENT_LOGIN_IMPLEMENTATION.md  README.md  SEARCH_SNIPPETS_IMPLEMENTATION.md  SORTING_FEATURE_SUMMARY.md  SYNC_FIX_SUMMARY.md  TEST_COVERAGE_MONACO.md  compose-example-README.md  compose.example.yaml  compose.yaml  docker-compose-README.md  package-lock.json  package.json
.agent/rules/: commit-after-changes.md
.cursor/: hooks.json
.cursor/plans/: BACKEND_WARNING_TEST_RESULTS.md  EDITOR_SYNC_SIMPLIFIED.md  MANUAL_TEST_CHECKLIST.md  MONACO_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  SEARCH_HIGHLIGHTING_IMPLEMENTATION.md  TESTING_SUMMARY.md  TEST_COVERAGE_MONACO.md  backend-warning-messages-920d009e.plan.md  docker-ghcr-setup-e136cc15.plan.md  file-explorer-sorting.plan.md  keyboard-navigation-search.plan.md  milkdown-editor-migration-a95ec243.plan.md  milkdown-wysiwyg-migration-b5d86e67.plan.md  omni-search-mvp-6e346452.plan.md  tiptap-ebc17d15.plan.md  ui-enhancements-d78d0da7.plan.md
.cursor/rules/: 01-project-overview.mdc  02-documentation-requirements.mdc  10-docs-major-changes.md  10-python-backend-standards.mdc  11-typescript-vue-standards.mdc  12-testing-backend.mdc  13-testing-frontend.mdc  20-security-requirements.mdc  20-tdd-workflow.md  21-api-design-patterns.mdc  30-git-workflow.mdc  (+7 more)
backend/: README.md  env.example  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  config.py  directories.py  images.py  notes.py
backend/app/core/: auth.py
backend/app/services/: directory_service.py  file_service.py  git_service.py  image_service.py
backend/tests/: conftest.py  test_auth.py  test_directories.py  test_directories_auth.py  test_git_ignore.py  test_git_service.py  test_health.py  test_images.py  test_notes.py  test_notes_auth.py  test_search.py
docs/: api-endpoints.md  architecture-design.md  initial-mvp-design.md  performance-optimizations.md  testing-strategy.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright-basic.config.ts  playwright.config.ts  test-results.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts
kbase-vault/: test-tasks.md
openspec/: project.md
scripts/: build-push-containers.sh  rebuild-container.sh
specs/: date-option-in-file-insert_spec.md  fix-check-box-indent_spec.md  mobile-single-pane-change_spec.md  panel-toolbar-redesign_spec.md
(+119 files in other folders)
